Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-122751

Top flaky test: tst_qaccessibilitymac::treeViewTest on MacOS_14 ARM64, MacOS_13, MacOS_12

XMLWordPrintable

    • 283ff11d0 (dev), dac1a338d (dev), 1f7e92641 (dev), c802de110 (6.8), 8633139e2 (6.8), 39524fabc (6.8), 080d21357 (6.7)

      Test case: tst_qaccessibilitymac::treeViewTest has failed on MacOS_14 ARM64 Clang
      The test failed 1 times and was flaky 1 time last week.

      Coin log excerpt from failed run:
      agent:2024/02/19 08:33:30 build.go:404: 615: QDEBUG : tst_QAccessibilityMac::treeViewTest() AXUIElementCopyAttributeValue( "AXTitle" ) returned error = AXError(value=-25202, name=kAXErrorInvalidUIElement, description="The AXUIElementRef passed to the function is invalid.")
      agent:2024/02/19 08:33:30 build.go:404: 615: FAIL! : tst_QAccessibilityMac::treeViewTest() Compared values are not the same
      agent:2024/02/19 08:33:30 build.go:404: 615: Actual (cellText(1, 0)): ""
      agent:2024/02/19 08:33:30 build.go:404: 615: Expected (users->text(0)): "Users"
      agent:2024/02/19 08:33:30 build.go:404: 615: Loc: [/Users/qt/work/qt/qtbase/tests/auto/other/qaccessibilitymac/tst_qaccessibilitymac.mm(803)]
      ...

      Full log at : coin log
      Statistics about test fails: link to grafana dashboard

        For Gerrit Dashboard: QTBUG-122751
        # Subject Branch Project Status CR V

            vhilshei Volker Hilsheimer
            testresults_metrics_bot Testresults Metrics Bot
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: